<resources>
    <string name="app_name">TestApp</string>
    <string name="search_hint">Search</string>
    <string name="filter">Filter</string>
    <string name="tips">Tips</string>

    <!-- For seeing layout elements while develop-->
    <string name="stub_venue_name">Stub Name</string>
    <string name="stub_venue_category">Stub category,</string>
    <string name="stub_price">$$</string>
    <string name="stub_venue_address">Stub Address</string>
    <string name="stub_venue_distance">0.1 km,</string>
    <string name="stub_venue_description">Description....</string>
    <string name="stub_venue_rating">3.5</string>
    <string name="stub_tip">So tasty coffee. You should visit it!!!</string>

    <!-- Permissions warning -->
    <string name="text_warn">Permission Mandatory for this App</string>
    <string name="settings">Settings</string>
</resources>
