<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VenueDetailsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:layout_margin="@dimen/margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/venueFirstPhoto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_broken_image" />

                <ImageView
                    android:id="@+id/venueSecondPhoto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_broken_image" />

                <ImageView
                    android:id="@+id/venueThirdPhoto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_broken_image" />

            </LinearLayout>

            <TextView
                android:id="@+id/venueRatingDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:padding="@dimen/margin"
                android:textSize="@dimen/large_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin">

                <TextView
                    android:id="@+id/venueNameDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_toLeftOf="@+id/venuePriceDetails"
                    android:layout_toStartOf="@+id/venuePriceDetails"
                    android:text="@string/stub_venue_name"
                    android:textSize="@dimen/large_text_size" />

                <TextView
                    android:id="@+id/venueCategoryDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/venueNameDetails"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:text="@string/stub_venue_category"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/venueDescriptionDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/venueCategoryDetails"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:text="@string/stub_venue_description"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/venuePriceDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:textSize="@dimen/large_text_size" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/venueAddressDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/stub_venue_address"
                android:textSize="@dimen/small_text_size" />

            <fragment
                android:id="@+id/mapFragment"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/map_view_height"
                app:cameraZoom="13"
                app:liteMode="true"
                app:mapType="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/tips"
                android:textSize="@dimen/large_text_size" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/tipsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin" />

                <ProgressBar
                    android:id="@+id/tipsLoading"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>